<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/message_compose_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/primary_text_light"
        android:ems="10"
        android:hint="@string/enter_forename_lastname"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/message_compose_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_subject"
        android:inputType="textEmailSubject"/>

    <EditText
        android:id="@+id/message_compose_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_message"
        android:inputType="textMultiLine"
        android:singleLine="false"/>

</LinearLayout>