<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2013 ELAN e.V.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sign_in_imageview"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/studip_mobile_dark"
        android:contentDescription="@string/studip_logo"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:src="@drawable/logo_studip" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/studip_mobile_dark"
        android:gravity="center"
        android:paddingBottom="@dimen/layout_margin_normal"
        android:paddingLeft="@dimen/layout_margin_normal"
        android:textColor="@color/primary_text_dark"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_small"
        font:typeface="Roboto-Regular.ttf" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/homepage_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/studip_mobile_dark"
        android:gravity="center"
        android:linksClickable="true"
        android:paddingBottom="@dimen/layout_margin_normal"
        android:paddingLeft="@dimen/layout_margin_normal"
        android:text="@string/homepage_text"
        android:textColor="@color/primary_text_dark"
        android:textSize="@dimen/text_size_small"
        android:textColorLink="@color/sutdip_mobile_light"
        font:typeface="Roboto-Regular.ttf" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_normal"
        android:text="@string/about_text"
        android:textColor="@color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_small"
        font:typeface="Roboto-Regular.ttf" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/privacy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_normal"
        android:inputType="textCapCharacters"
        android:text="@string/privacy_policy"
        android:textAllCaps="true"
        android:textColor="@color/secondary_text_light"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_small"
        font:typeface="Roboto-Bold.ttf" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/privacy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_normal"
        android:text="TODO"
        android:textColor="@color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_medium"
        font:typeface="Roboto-Regular.ttf" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/licenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_normal"
        android:inputType="textCapCharacters"
        android:text="@string/licenses"
        android:textAllCaps="true"
        android:textColor="@color/secondary_text_light"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_small"
        font:typeface="Roboto-Bold.ttf" />

    <de.elanev.studip.android.app.widget.TypefacedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:font="http://schemas.android.com/apk/res/de.elanev.studip.android.app"
        android:id="@+id/licenses_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_normal"
        android:text="TODO"
        android:textColor="@color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_medium"
        font:typeface="Roboto-Regular.ttf" />
</LinearLayout>